# infopy

./: .gitignore  pyproject.toml
infopy/: metrics.py
tests/: test_infopy.py
